src/main/java/com/example/tareaspring/errors/PlayerAlreadySignedException.java
package com.example.tareaspring.errors;

public class PlayerAlreadySignedException extends RuntimeException {
    public PlayerAlreadySignedException(String message) {
        super(message);
    }
}
